other/create-default-pdb/.chainsaw-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default-pdb-ns
  labels:
    app: busybox
    foo: bar
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
        resources: {}
