other/create-default-pdb/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: create-default-pdb
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
